# music

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  black.toml  docker-compose.yml  pyproject.toml  setup.cfg
config/: gunicorn.py
src/: config.json  main.py  settings.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/song/: __init__.py  paginated_list.py
src/core/db/: client.py  song.py
src/core/db/models/: __init__.py  rating.py  song.py
src/core/songs/v1/: get.py  schema.py
src/utils/logging/: log_scheme.py  logger.py
src/utils/validation/: decorator.py
tests/: conftest.py
tests/api/v1/: test_songs.py
