[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["AE <jevis007@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
gunicorn = "20.1.0"
pydantic = "1.6.1"
flask = "2.1.*"
sentry-sdk = {version = "1.5.*", extras = ["flask"]}
pymongo = "4.1.*"
mongoengine = "0.24.*"
marshmallow = "3.15.*"
flasgger = "0.9.*"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = {extras = ["colors"], version = "^5.10.1"}
pytest = "^6.2.5"
bandit = "^1.7.2"
safety = "^1.10.3"
pytest-cov = "^3.0.0"
freezegun = "1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

